# claude-teams-view

./: .gitignore  README.md  pyproject.toml
design-system/teams-view/: MASTER.md
scripts/: detach_test.sh  shim_test.sh  smoke.sh  stderr_test.sh
teams_view/: __init__.py  __main__.py  cli.py  mailbox_watcher.py  proxy.py  shim.py  sse.py  team_watcher.py  trace_store.py  viewer.html  viewer_server.py
teams_view.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
