[project]
name = "teams-view"
version = "0.1.0"
description = "Per-teammate visibility for Claude Code agent teams: sidebar of team members, switchable trace streams, real-time updates."
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "cxzy" }]
readme = "README.md"
keywords = ["claude", "claude-code", "agent-teams", "swarm", "trace", "proxy"]

dependencies = [
    "aiohttp>=3.9,<4",
]

[project.scripts]
teams-view = "teams_view.cli:main"
teams-view-shim = "teams_view.shim:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["teams_view"]

[tool.setuptools.package-data]
teams_view = ["viewer.html"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
